# dbase-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  reading.rs  writing.rs
src/record/: field.rs  mod.rs
tests/: shift_jis.rs  test_serde.rs  tests.rs
tests/data/: shift_jis.dbf  shift_jis_field_name.dbf
