[package]
name = "dbase"
version = "0.2.3"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write .dbf in Rust"
license = "MIT"
readme = "README.md"
keywords = ["dbase", "dbf"]
homepage = "https://github.com/tmontaigu/dbase-rs"
repository = "https://github.com/tmontaigu/dbase-rs"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
encoding_rs = "0.8"
time = {version = "0.3", features=["std"]}
serde = {version = "1.0.102", optional = true}

[dev-dependencies]
serde_derive = "1.0.102"

